package edu.hm.cs.swa.cofa;

public abstract class Shape {

    public Shape() {}

    public abstract void draw();
}
